# mboct-mbdyn-pkg

./: .mailmap  DESCRIPTION  INDEX  Makefile  README.md
.github/workflows/: html_ref.yml  simple.yml  ubuntu-20-04.yml  ubuntu-latest.yml
inst/: MBDYN_ELEMENT_FLAG_LUMPED_MASS.m  MBDYN_ELEMENT_FLAG_STATIC.m  MBDYN_NODE_TYPE_DYNAMIC_STRUCT.m  MBDYN_NODE_TYPE_DYNAMIC_STRUCT_DISP.m  MBDYN_NODE_TYPE_STATIC_STRUCT.m  MBDYN_NODE_TYPE_STATIC_STRUCT_DISP.m  mbdyn_inertia_01.tst  mbdyn_path_init.m  mbdyn_post_abs_to_rel.m  mbdyn_post_abs_to_rel.tst  mbdyn_post_abs_to_rel_01.tst  mbdyn_post_abs_to_rel_02.tst  mbdyn_post_abs_to_rel_03.tst  mbdyn_post_abs_to_rel_04.tst  mbdyn_post_abs_to_rel_05.tst  mbdyn_post_abs_to_rel_06.tst  mbdyn_post_abs_to_rel_07.tst  mbdyn_post_abs_to_rel_08.tst  mbdyn_post_abs_to_rel_09.tst  mbdyn_post_abs_to_rel_10.tst  mbdyn_post_abs_to_rel_11.tst  mbdyn_post_abs_to_rel_12.tst  mbdyn_post_abs_to_rel_13.tst  mbdyn_post_abs_to_rel_14.tst  mbdyn_post_abs_to_rel_15.tst  mbdyn_post_abs_to_rel_16.tst  mbdyn_post_abs_to_rel_17.tst  mbdyn_post_abs_to_rel_18.tst  mbdyn_post_abs_to_rel_19.tst  mbdyn_post_angles_to_rotation_mat.m  mbdyn_post_angles_to_rotation_mat.tst  mbdyn_post_angles_to_rotation_mat_01.tst  mbdyn_post_angles_to_rotation_mat_02.tst  mbdyn_post_deformations_scale.m  mbdyn_post_deformations_scale.tst  mbdyn_post_deformations_scale_01.tst  mbdyn_post_deformations_scale_02.tst  mbdyn_post_deformations_scale_03.tst  mbdyn_post_deformations_scale_04.tst  mbdyn_post_deformations_scale_05.tst  (+393 more)
inst/private/: mbdyn_convert_path.m  mbdyn_post_linear_solver_factor.m  mbdyn_post_linear_solver_mldivide.m
src/: Makefile.am  Makefile.in  config.h.in  configure.ac  mbdyn_post_load_output.cc
